<resources>
    <string name="app_name">Augmented Me</string>
    <string name="username">Username</string>
    <string name="remember">Remember Me</string>
    <string name="mustNotBeEmpty">Must not be empty !</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Log out</string>
    <string name="nom">Name</string>
    <string name="date">Date</string>
    <string name="add_your_patch">Add your Patch</string>
    <string name="description">Description</string>
    <string name="Date" />
    <string name="datee">Date</string>
    <string name="add">Add</string>
    <string name="ar">AR Model</string>
    <string name="update">Update</string>
    <string name="game_view_content_description" translatable="false">Game view</string>
    <string name="First_name">first name</string>
    <string name="Last_Name">"last name "</string>
    <string name="user_name">User name</string>
    <string name="lastName">Last name</string>
    <string name="update_profile">Update profile</string>
    <string name="confirme_password">Confirme password</string>
    <string name="Chosedate">Chose date</string>
    <string name="register">Create  a account</string>


</resources>