<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profilePrenom2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_baseline_person_24"
            app:civ_border_color="@color/purple_500"
            app:civ_border_width="5dp"
            app:layout_constraintEnd_toEndOf="parent"


            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="51dp"
            android:layout_marginTop="43dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/First_name"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImage" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="51dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/lastName"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="51dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/profileNom"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="43dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/First_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/profileImage" />

        <TextView
            android:id="@+id/profilePrenom"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/Last_Name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/profileNom" />

        <TextView
            android:id="@+id/profileEmail"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/profilePrenom" />

        <Button
            android:id="@+id/button23"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_bg"
            android:text="@string/update_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>